change on style

--- a/Services-main/index.html
+++ b/Services-main/index.html
@@ -77,10 +77,10 @@
       <p>We are excited to be partnering with SDA providers to offer you safe and accessible homes and disability support from our experienced teams that suit your individual needs.</p>
       <button>View our SDA homes here</button>
   </div>
-  <div class="container">
+  <div class="container1">
     <div class="card">
         <div class="icon">
-            <img src="home-icon.png" alt="In Your Home">
+            <img src="./Images/home.png" alt="In Your Home">
         </div>
         <h2>In Your Home</h2>
         <p>There are so many ways to flourish at home. We provide flexible support designed to meet your individual needs and maximise your independence.</p>
@@ -88,7 +88,7 @@
     </div>
     <div class="card">
         <div class="icon">
-            <img src="community-icon.png" alt="In Your Community">
+            <img src="./Images/group.png" alt="In Your Community">
         </div>
         <h2>In Your Community</h2>
         <p>Everyone belongs. Our Support Workers follow your lead, interests, and goals to help you connect with your local community and truly belong.</p>
@@ -96,7 +96,7 @@
     </div>   
     <div class="card">
         <div class="icon">
-            <img src="home-living-icon.png" alt="Home & Living Options">
+            <img src="./Images/agreement.png" alt="Home & Living Options">
         </div>
         <h2>Home & Living Options</h2>
         <p>Everyone needs a place to call home. We have a range of houses and living arrangements so you can live in your home, your way.</p>
@@ -104,7 +104,7 @@
     </div>
     <div class="card">
         <div class="icon">
-            <img src="join-icon.png" alt="Join Us">
+            <img src="./Images/collaboration.png" alt="Join Us">
         </div>
         <h2>Join Us</h2>
         <p>Do you want to make a difference? Join us in our mission to support people with disability to live a good life!</p>
