--- a/Services-main/index.html
+++ b/Services-main/index.html
@@ -128,23 +128,23 @@
 </div>
 <div class="planning-guide-section">
   <div class="guide-content">
-      <img src="iplan-guide.png" alt="iPlan Guide">
+      <img src="./Images/40449-INTERC-Interchange-WA-Annual-Report-2019_FNL-1.png.webp" alt="iPlan Guide">
   </div>
   <div class="guide-description">
       <h2>Download your Free Planning Guide</h2>
-      <p>Planning your support can be challenging. Our 'iPlan - Planning for a good life' booklet can help to find out what is important to you. If you need support to get started, let us know!</p>
+      <p>Planning your support can be challenging. Our 'iPlan -<br> Planning for a good life' booklet can help to find out what is important to you.<br> If you need support to get started, let us know!</p>
       <a href="#" class="download-button">Download</a>
   </div>
 </div>
 <hr>
 
 <div class="partner-logos-section">
-  <img src="logo-wais.png" alt="WAiS">
-  <img src="logo-disability-services.png" alt="Disability Services Commission">
-  <img src="logo-nds.png" alt="NDS">
-  <img src="logo-wa-disability-support-awards-2020.png" alt="WA Disability Support Awards 2020">
-  <img src="logo-wa-disability-support-awards-2021.png" alt="WA Disability Support Awards 2021">
-  <img src="logo-wa-disability-support-awards-2023.png" alt="WA Disability Support Awards 2023">
+  <img src="./Images/logo-1.jpg.webp" alt="WAiS">
+  <img src="./Images/print-logo-dsc.png" alt="Disability Services Commission">
+  <img src="./Images/logo-3.jpg.webp" alt="NDS">
+  <img src="./Images/WA_DSA_2020_intro.jpg.webp" alt="WA Disability Support Awards 2020">
+  <img src="./Images/DisabilitySupport-2021-canva-.png.webp" alt="WA Disability Support Awards 2021">
+  <img src="./Images/2023WAdisabiltysupportawards.png.webp" alt="WA Disability Support Awards 2023">
 </div>
 <div class="assume1">
 <h1>Stories of Interchange</h1>
