--- a/Services-main/index.html
+++ b/Services-main/index.html
@@ -122,7 +122,7 @@
       <a href="#" class="read-more">Read more</a>
   </div>
   <div class="video-content">
-      <img src="everyone-belongs-video-thumbnail.png" alt="Everyone Belongs Video">
+      <img src="./Images/threechildren_1658789720814-HR.jpg" alt="Everyone Belongs Video">
       <button class="play-button">Play Video</button>
   </div>
 </div>
