--- a/Services-main/index.html
+++ b/Services-main/index.html
@@ -7,8 +7,8 @@
     <title>Interchange Website</title>
 </head>
 <body>
-    <header class="header">
-        <div class="top-bar">
+    <header class="header1">
+        <div class="top-bar1">
             <div class="contact-info">
                 <span>📞 (08) 9329 9399</span>
             </div>
@@ -51,22 +51,22 @@
     </section>
     <div class="service-section">
       <div class="service-card">
-          <img src="./Images/Solo.jpg" alt="Individual Living Options">
+          <img src="./Images/Solo.jpg" alt="Individual Living Options"><hr>
           <h3>Individual Living Options</h3>
           <p>Everyone needs a place to call home. We can guide and support you to live in a home of your choice.</p>
       </div>
       <div class="service-card">
-          <img src="./Images/Daliy.jpg" alt="Daily Living">
+          <img src="./Images/Daliy.jpg" alt="Daily Living"><hr>
           <h3>Daily Living</h3>
           <p>Our Support Workers follow your lead, interests, and goals to help you connect with your local community.</p>
       </div>
       <div class="service-card">
-          <img src="./Images/Empowering-Practices-with-Expert-Front-Office-Staff.jpg" alt="Plan Management">
+          <img src="./Images/Empowering-Practices-with-Expert-Front-Office-Staff.jpg" alt="Plan Management"><hr>
           <h3>Plan Management</h3>
           <p>Managing your NDIS Plan is stressful. Leave it to our expert Plan Managers to deal with providers, pay invoices, give guidance and more!</p>
       </div>
       <div class="service-card">
-          <img src="./Images/2fQeyNFZFeG1DiGUKWgNnF-1-Diversity_Meeting_792x792.jpg" alt="Support Coordination">
+          <img src="./Images/2fQeyNFZFeG1DiGUKWgNnF-1-Diversity_Meeting_792x792.jpg" alt="Support Coordination"><hr>
           <h3>Support Coordination</h3>
           <p>We assist you to build the skills you need to understand, implement and use your NDIS plan.</p>
       </div>
