--- a/Services-main/contact.html
+++ b/Services-main/contact.html
@@ -4,65 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact Us</title>
-    <link rel="stylesheet" href="styles.css" />
-    <style>
-      body {
-        font-family: Arial, sans-serif;
-        margin: 0;
-        padding: 0;
-        background-color: #f9f9f9;
-      }
-      .container {
-        width: 80%;
-        margin: 20px auto;
-        background-color: #fff;
-        padding: 20px;
-        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-      }
-      h1 {
-        color: #4caf50;
-      }
-      .contact-section {
-        display: flex;
-        justify-content: space-between;
-      }
-      .contact-form {
-        width: 60%;
-      }
-      .contact-details {
-        width: 35%;
-      }
-      .contact-form input,
-      .contact-form textarea {
-        width: 100%;
-        padding: 10px;
-        margin: 10px 0;
-        border: 1px solid #ccc;
-        border-radius: 4px;
-      }
-      .contact-form button {
-        background-color: #4caf50;
-        color: white;
-        padding: 10px 20px;
-        border: none;
-        border-radius: 4px;
-        cursor: pointer;
-      }
-      .contact-form button:hover {
-        background-color: #45a049;
-      }
-      .contact-details h2,
-      .contact-details p {
-        margin: 10px 0;
-      }
-      .contact-details a {
-        color: #4caf50;
-        text-decoration: none;
-      }
-      .contact-details a:hover {
-        text-decoration: underline;
-      }
-    </style>
+    <link rel="stylesheet" href="contact.css" />
+    
   </head>
   <body>
     <header class="header">
