--- a/Services-main/index.html
+++ b/Services-main/index.html
@@ -7,8 +7,8 @@
     <title>Interchange Website</title>
 </head>
 <body>
-    <header class="header1">
-        <div class="top-bar1">
+    <header class="header">
+        <div class="top-bar">
             <div class="contact-info">
                 <span>📞 (08) 9329 9399</span>
             </div>
