--- a/Services-main/index.html
+++ b/Services-main/index.html
@@ -26,7 +26,7 @@
             </a>
             </div>
             <nav class="navigation">
-                <a href="services.html">Services</a>
+                <a href="services.html" class="service1">Services</a>
                 <a href="our_approach.html">Our Approach</a>
                 <a href="stories.html">Stories</a>
                 <a href="contact.html">Contact</a>
