--- a/Services-main/index.html
+++ b/Services-main/index.html
@@ -26,7 +26,7 @@
             </a>
             </div>
             <nav class="navigation">
-                <a href="services.html" class="service1">Services</a>
+                <a href="services.html">Services</a>
                 <a href="our_approach.html">Our Approach</a>
                 <a href="stories.html">Stories</a>
                 <a href="contact.html">Contact</a>
@@ -147,12 +147,12 @@
   <img src="./Images/2023WAdisabiltysupportawards.png.webp" alt="WA Disability Support Awards 2023">
 </div>
 
-<div class="assume1">
+<div class="assume">
 <h1>Stories of Interchange</h1>
 </div>
 <div class="assume">  
   <div class="assume-item">    
-      <img src="path_to_jade_image.jpg" alt="Jade">
+      <img src="./Images/Awesome.jpg" alt="Jade">
       <div>
           <h2>We Think You Are Awesome - Jade</h2>
           <p>Jade’s passion is evident in her role at Interchange, where she keeps administrative tasks running smoothly to help people with disability live fulfilling lives.</p>
@@ -160,7 +160,7 @@
       </div>
   </div>
   <div class="assume-item">
-      <img src="path_to_meigan_image.jpg" alt="Meigan">
+      <img src="./Images/Awesome.jpg" alt="Meigan">
       <div>
           <h2>We Think You Are Awesome - Meigan</h2>
           <p>Several years ago, Meigan would work at her old job at a food court, and she would always be so delighted by the great spirit and friendliness people with disability would approach her with.</p>
@@ -168,7 +168,7 @@
       </div>
   </div>
   <div class="assume-item">
-      <img src="path_to_trevor_image.jpg" alt="Trevor">
+      <img src="./Images/Awesome.jpg" alt="Trevor">
       <div>
           <h2>A Deep Seeded Passion - Meet Trevor</h2>
           <p>Marc’s story is a testament to the positive impact of aligning interests with meaningful actions. A close and genuine relationship with his Support Workers Sandra and Nicola meant that he felt comfortable sharing his passions with his team.</p>
