--- a/Services-main/index.html
+++ b/Services-main/index.html
@@ -190,17 +190,21 @@
           <p><strong>Postal Address</strong><br>PO Box 121 Cloverdale WA 6985</p>
       </div>
       <div class="footer-middle">
-          <p><a href="#">Services</a></p>
-          <p><a href="#">Our Approach</a></p>
-          <p><a href="#">Stories</a></p>
-          <p><a href="#">Join Us</a></p>
-          <p><a href="#">About</a></p>
-          <p><a href="#">Feedback</a></p>
+        <div class="footer-column">
+            <a href="#">Services</a>
+            <a href="#">Our Approach</a>
+            <a href="#">Stories</a>
+        </div>
+        <div class="footer-column">
+            <a href="#">Join Us</a>
+            <a href="#">About</a>
+            <a href="#">Feedback</a>
+        </div>
       </div>
       <div class="footer-right">
-          <img src="path_to_award1.jpg" alt="Award 1">
-          <img src="path_to_award2.jpg" alt="Award 2">
-          <img src="path_to_award3.jpg" alt="Award 3">
+          <img src="./Images/11-1-300x82.jpg.webp" alt="Award 1">
+          <img src="./Images/WA_DSA_2020_intro.jpg.webp" alt="Award 2">
+          <img src="./Images/acnc-logo.svg" alt="Award 3">
       </div>
   </div>
   <div class="footer-bottom">
