--- a/Services-main/index.html
+++ b/Services-main/index.html
@@ -180,7 +180,7 @@
 <div class="view">
 <a href="#" class="view-more">View all</a>
 </div>
-<footer>
+<footer><hr>
   <div class="footer-content">
       <div class="footer-left">
           <img src="path_to_logo.jpg" alt="Interchange Logo">
