Service page added

--- a/Services-main/services.html
+++ b/Services-main/services.html
@@ -35,6 +35,12 @@
     
         </div>
     </header>
+<section class="info-section">
+    <div class="info-content">
+        <h2>Everyone belongs</h2>
+        <p>Supporting people with disability to live a good life</p>
+    </div>
+</section>
     <!-- Services Section -->
     <div class="services-section">
         <h1>Services</h1>
@@ -91,6 +97,57 @@
                     Personal care is a regular and important part of every person’s daily routine.
                     Every person is unique and with this comes a different set of needs throughout their
                     daily personal care. This may include tasks that are very personal to...
+                </p>
+                <a href="#">Read more ➔</a>
+            </div>
+        </div>
+
+        <div class="service-item">
+            <img src="path-to-your-image4.jpg" alt="Developing Capacity & Learning">
+            <div class="service-content">
+                <h2>Developing Capacity & Learning</h2>
+                <p>
+                    Here at Interchange, we truly understand the importance of personal development and independence. 
+                    We can assist you to learn or improve skills that help you to be more independent and ultimately live your own life. 
+                    With tasks you need to...
+                </p>
+                <a href="#">Read more ➔</a>
+            </div>
+        </div>
+
+        <div class="service-item">
+            <img src="path-to-your-image4.jpg" alt="Short-Term Accommodation (STA)">
+            <div class="service-content">
+                <h2>Short-Term Accommodation (STA)</h2>
+                <p>
+                    Do you need a break away from home? Or do you seek to try something new and different? Interchange is a leading NDIS disability support provider, 
+                    helping people with disability to live a good life since 1991. We are excited...
+                </p>
+                <a href="#">Read more ➔</a>
+            </div>
+        </div>
+
+        <div class="service-item">
+            <img src="path-to-your-image4.jpg" alt="Personal Care">
+            <div class="service-content">
+                <h2>Transport Options</h2>
+                <p>
+                    For many people with a disability, 
+                    transport is about much more than simply going from point A to point B – it’s about freedom,
+                    independence and education. Let us help you get where you need to go safely. My support...
+                </p>
+                <a href="#">Read more ➔</a>
+            </div>
+        </div>
+
+        <div class="service-item">
+            <img src="path-to-your-image4.jpg" alt="Personal Care">
+            <div class="service-content">
+                <h2>Social & Community Participation</h2>
+                <p>
+                    As an active and engaged member of your local community you can develop valuable relationships, 
+                    skills and a sense of belonging. 
+                    Your Interchange Support Team will follow your lead, interests and goals to help you to connect with your community....
                 </p>
                 <a href="#">Read more ➔</a>
             </div>
