--- a/Services-main/our_approach.html
+++ b/Services-main/our_approach.html
@@ -191,5 +191,38 @@
             </form>
         </aside>
     </div>
+    <footer><hr>
+        <div class="footer-content">
+            <div class="footer-left">
+                <img src="path_to_logo.jpg" alt="Interchange Logo">
+                <p><strong>Phone</strong><br>(08) 9329 9399</p>
+                <p><strong>Email</strong><br><a href="mailto:hello@interchangewa.org.au">hello@interchangewa.org.au</a></p>
+                <p><strong>WA Head Office</strong><br>10/213 Wright Street, Cloverdale WA 6105</p>
+                <p><strong>Postal Address</strong><br>PO Box 121 Cloverdale WA 6985</p>
+            </div>
+            <div class="footer-middle">
+              <div class="footer-column">
+                  <a href="#">Services</a>
+                  <a href="#">Our Approach</a>
+                  <a href="#">Stories</a>
+              </div>
+              <div class="footer-column">
+                  <a href="#">Join Us</a>
+                  <a href="#">About</a>
+                  <a href="#">Feedback</a>
+              </div>
+            </div>
+            <div class="footer-right">
+                <img src="./Images/11-1-300x82.jpg.webp" alt="Award 1">
+                <img src="./Images/WA_DSA_2020_intro.jpg.webp" alt="Award 2">
+                <img src="./Images/acnc-logo.svg" alt="Award 3">
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>&copy; 2024 Interchange WA</p>
+            <p><a href="#">Privacy</a> / <a href="#">Terms & Conditions</a></p>
+            
+        </div>
+      </footer>
 </body>
 </html>
