--- a/Services-main/stories.html
+++ b/Services-main/stories.html
@@ -77,7 +77,7 @@
                 <p class="date">2024-07-30  /  Blog, Stories</p>
                 <p class="description">Jade’s passion is evident in her role at Interchange, where she keeps administrative tasks running smoothly to help people with disability live fulfilling lives. Jade enjoys knowing that she is doing something that adds value to someone’s life.</p>
                 <a href="#" class="read-more">Read more</a>
-            </article>
+            </article>            
         </section>
 
         <!-- Second Section with a single story and pagination -->
@@ -93,7 +93,108 @@
                 </p>
                 <a href="#" class="read-more">Read more</a>
             </article>
+
+            <article class="story">
+                <img src="image4.png" alt="We Think You Are Awesome">
+                <h2>We Think You Are Awesome – Geoffrey</h2>
+                <p class="date">2024-05-28  /  Blog, Stories</p>
+                <p class="description">
+                    For over four years Geoffrey has been part of the Interchange team. 
+                    He gained much knowledge in supporting people with complex needs in his time as a Support Worker. 
+                    He finds his role utterly rewarding, feels a sense of belonging with his team and is proud of his accomplishments.
+                </p>
+                <a href="#" class="read-more">Read more</a>
+            </article>
+
+            <article class="story">
+                <img src="image4.png" alt="We Think You Are Awesome">
+                <h2>We Think You Are Awesome – Geoffrey</h2>
+                <p class="date">2024-05-28  /  Blog, Stories</p>
+                <p class="description">
+                    For over four years Geoffrey has been part of the Interchange team. 
+                    He gained much knowledge in supporting people with complex needs in his time as a Support Worker. 
+                    He finds his role utterly rewarding, feels a sense of belonging with his team and is proud of his accomplishments.
+                </p>
+                <a href="#" class="read-more">Read more</a>
+            </article>            
         </section>
+        <!-- third Section with a single story and pagination -->
+        <section class="stories single-storyy">
+            <article class="story">
+                <img src="image4.png" alt="We Think You Are Awesome">
+                <h2>We Think You Are Awesome – Geoffrey</h2>
+                <p class="date">2024-05-28  /  Blog, Stories</p>
+                <p class="description">
+                    For over four years Geoffrey has been part of the Interchange team. 
+                    He gained much knowledge in supporting people with complex needs in his time as a Support Worker. 
+                    He finds his role utterly rewarding, feels a sense of belonging with his team and is proud of his accomplishments.
+                </p>
+                <a href="#" class="read-more">Read more</a>
+            </article>
+
+            <article class="story">
+                <img src="image4.png" alt="We Think You Are Awesome">
+                <h2>We Think You Are Awesome – Geoffrey</h2>
+                <p class="date">2024-05-28  /  Blog, Stories</p>
+                <p class="description">
+                    For over four years Geoffrey has been part of the Interchange team. 
+                    He gained much knowledge in supporting people with complex needs in his time as a Support Worker. 
+                    He finds his role utterly rewarding, feels a sense of belonging with his team and is proud of his accomplishments.
+                </p>
+                <a href="#" class="read-more">Read more</a>
+            </article>
+
+            <article class="story">
+                <img src="image4.png" alt="We Think You Are Awesome">
+                <h2>We Think You Are Awesome – Geoffrey</h2>
+                <p class="date">2024-05-28  /  Blog, Stories</p>
+                <p class="description">
+                    For over four years Geoffrey has been part of the Interchange team. 
+                    He gained much knowledge in supporting people with complex needs in his time as a Support Worker. 
+                    He finds his role utterly rewarding, feels a sense of belonging with his team and is proud of his accomplishments.
+                </p>
+                <a href="#" class="read-more">Read more</a>
+            </article>            
+        </section>
+        <!-- third Section with a single story and pagination -->
+        <section class="stories single-storyyy">
+            <article class="story">
+                <img src="image4.png" alt="We Think You Are Awesome">
+                <h2>We Think You Are Awesome – Geoffrey</h2>
+                <p class="date">2024-05-28  /  Blog, Stories</p>
+                <p class="description">
+                    For over four years Geoffrey has been part of the Interchange team. 
+                    He gained much knowledge in supporting people with complex needs in his time as a Support Worker. 
+                    He finds his role utterly rewarding, feels a sense of belonging with his team and is proud of his accomplishments.
+                </p>
+                <a href="#" class="read-more">Read more</a>
+            </article>
+
+            <article class="story">
+                <img src="image4.png" alt="We Think You Are Awesome">
+                <h2>We Think You Are Awesome – Geoffrey</h2>
+                <p class="date">2024-05-28  /  Blog, Stories</p>
+                <p class="description">
+                    For over four years Geoffrey has been part of the Interchange team. 
+                    He gained much knowledge in supporting people with complex needs in his time as a Support Worker. 
+                    He finds his role utterly rewarding, feels a sense of belonging with his team and is proud of his accomplishments.
+                </p>
+                <a href="#" class="read-more">Read more</a>
+            </article>
+
+            <article class="story">
+                <img src="image4.png" alt="We Think You Are Awesome">
+                <h2>We Think You Are Awesome – Geoffrey</h2>
+                <p class="date">2024-05-28  /  Blog, Stories</p>
+                <p class="description">
+                    For over four years Geoffrey has been part of the Interchange team. 
+                    He gained much knowledge in supporting people with complex needs in his time as a Support Worker. 
+                    He finds his role utterly rewarding, feels a sense of belonging with his team and is proud of his accomplishments.
+                </p>
+                <a href="#" class="read-more">Read more</a>
+            </article>
+        </section> 
+
 
         <div class="pagination">
             <a href="#" class="page">1</a>
