change on style

--- a/Services-main/stories.html
+++ b/Services-main/stories.html
@@ -84,8 +84,8 @@
         <section class="stories single-story">
             <article class="story">
                 <img src="image4.png" alt="We Think You Are Awesome">
-                <h2>We Think You Are Awesome – Geoffrey</h2>
-                <p class="date">2024-05-28  /  Blog, Stories</p>
+                <h2>We Think You Are Awesome – Lee</h2>
+                <p class="date">2024-06-19  /  Blog, Stories</p>
                 <p class="description">
                     For over four years Geoffrey has been part of the Interchange team. 
                     He gained much knowledge in supporting people with complex needs in his time as a Support Worker. 
@@ -96,24 +96,22 @@
 
             <article class="story">
                 <img src="image4.png" alt="We Think You Are Awesome">
-                <h2>We Think You Are Awesome – Geoffrey</h2>
-                <p class="date">2024-05-28  /  Blog, Stories</p>
+                <h2>When Dreams Come True – Marc’s Journey to Employment</h2>
+                <p class="date">2024-06-06  /  Blog, Stories</p>
                 <p class="description">
-                    For over four years Geoffrey has been part of the Interchange team. 
-                    He gained much knowledge in supporting people with complex needs in his time as a Support Worker. 
-                    He finds his role utterly rewarding, feels a sense of belonging with his team and is proud of his accomplishments.
-                </p>
+                    Marc’s story is a testament to the positive impact of aligning interests with meaningful actions.
+                    A close and genuine relationship with his Support Workers Sandra and Nicola meant that he felt comfortable sharing his passions with his team.
                 <a href="#" class="read-more">Read more</a>
             </article>
 
             <article class="story">
                 <img src="image4.png" alt="We Think You Are Awesome">
-                <h2>We Think You Are Awesome – Geoffrey</h2>
+                <h2>Love Beyond the Job Role</h2>
                 <p class="date">2024-05-28  /  Blog, Stories</p>
                 <p class="description">
-                    For over four years Geoffrey has been part of the Interchange team. 
-                    He gained much knowledge in supporting people with complex needs in his time as a Support Worker. 
-                    He finds his role utterly rewarding, feels a sense of belonging with his team and is proud of his accomplishments.
+                    When Kate and Taylor first met in their Team Leader’s office 7 years ago,
+                    there was an instant spark! Who would have known that fast forward those seven years, 
+                    they would have a beautiful baby girl together and are about to get married! 
                 </p>
                 <a href="#" class="read-more">Read more</a>
             </article>            
@@ -122,36 +120,34 @@
         <section class="stories single-storyy">
             <article class="story">
                 <img src="image4.png" alt="We Think You Are Awesome">
-                <h2>We Think You Are Awesome – Geoffrey</h2>
-                <p class="date">2024-05-28  /  Blog, Stories</p>
+                <h2>What is the WA Companion Card?</h2>
+                <p class="date">2024-07-30  /  Interchange News, Blog, Customer Information</p>
                 <p class="description">
-                    For over four years Geoffrey has been part of the Interchange team. 
-                    He gained much knowledge in supporting people with complex needs in his time as a Support Worker. 
-                    He finds his role utterly rewarding, feels a sense of belonging with his team and is proud of his accomplishments.
+                    Do you have a WA Companion Card? This Program enables Western Australians with significant, 
+                    permanent disability to engage in community events, receiving necessary attendant care.
                 </p>
                 <a href="#" class="read-more">Read more</a>
             </article>
 
             <article class="story">
                 <img src="image4.png" alt="We Think You Are Awesome">
-                <h2>We Think You Are Awesome – Geoffrey</h2>
-                <p class="date">2024-05-28  /  Blog, Stories</p>
+                <h2>We Think You Are Awesome – Meigan</h2>
+                <p class="date">2024-07-15  /  Blog, Stories</p>
                 <p class="description">
-                    For over four years Geoffrey has been part of the Interchange team. 
-                    He gained much knowledge in supporting people with complex needs in his time as a Support Worker. 
-                    He finds his role utterly rewarding, feels a sense of belonging with his team and is proud of his accomplishments.
+                    Several years ago, Meigan would work at her old job at a food court, 
+                    and she would always be so delighted by the great spirit and friendliness people with disability would approach her with. 
+                    This led her to think, ‘why not become a Support Worker’? 
                 </p>
                 <a href="#" class="read-more">Read more</a>
             </article>
 
             <article class="story">
                 <img src="image4.png" alt="We Think You Are Awesome">
-                <h2>We Think You Are Awesome – Geoffrey</h2>
-                <p class="date">2024-05-28  /  Blog, Stories</p>
+                <h2>A Deep Seeded Passion – Meet Trevor</h2>
+                <p class="date">2024-06-27  /  Blog, Stories</p>
                 <p class="description">
-                    For over four years Geoffrey has been part of the Interchange team. 
-                    He gained much knowledge in supporting people with complex needs in his time as a Support Worker. 
-                    He finds his role utterly rewarding, feels a sense of belonging with his team and is proud of his accomplishments.
+                    Marc’s story is a testament to the positive impact of aligning interests with meaningful actions. 
+                    A close and genuine relationship with his Support Workers Sandra and Nicola meant that he felt comfortable sharing his passions with his team.
                 </p>
                 <a href="#" class="read-more">Read more</a>
             </article>            
@@ -168,31 +164,7 @@
                     He finds his role utterly rewarding, feels a sense of belonging with his team and is proud of his accomplishments.
                 </p>
                 <a href="#" class="read-more">Read more</a>
-            </article>
-
-            <article class="story">
-                <img src="image4.png" alt="We Think You Are Awesome">
-                <h2>We Think You Are Awesome – Geoffrey</h2>
-                <p class="date">2024-05-28  /  Blog, Stories</p>
-                <p class="description">
-                    For over four years Geoffrey has been part of the Interchange team. 
-                    He gained much knowledge in supporting people with complex needs in his time as a Support Worker. 
-                    He finds his role utterly rewarding, feels a sense of belonging with his team and is proud of his accomplishments.
-                </p>
-                <a href="#" class="read-more">Read more</a>
-            </article>
-
-            <article class="story">
-                <img src="image4.png" alt="We Think You Are Awesome">
-                <h2>We Think You Are Awesome – Geoffrey</h2>
-                <p class="date">2024-05-28  /  Blog, Stories</p>
-                <p class="description">
-                    For over four years Geoffrey has been part of the Interchange team. 
-                    He gained much knowledge in supporting people with complex needs in his time as a Support Worker. 
-                    He finds his role utterly rewarding, feels a sense of belonging with his team and is proud of his accomplishments.
-                </p>
-                <a href="#" class="read-more">Read more</a>
-            </article>
+            </article>            
         </section> 
 
 
