--- a/Services-main/stories.html
+++ b/Services-main/stories.html
@@ -56,7 +56,7 @@
         <!-- First Section with multiple stories -->
         <section class="stories">
             <article class="story">
-                <img src="image1.png" alt="We Think You Are Awesome">
+                <img src="./Images/Awesome.jpg" alt="We Think You Are Awesome">
                 <h2>We Think You Are Awesome – Darren</h2>
                 <p class="date">2024-08-19  /  Blog, Stories</p>
                 <p class="description">Lead Support Worker Darren from our Belmont Neighbourhood used to be an English teacher but took the leap into the Disability Sector 5 years ago.</p>
@@ -64,7 +64,7 @@
             </article>
 
             <article class="story">
-                <img src="image2.png" alt="What is NDIS Plan Management?">
+                <img src="./Images/Awesome.jpg" alt="What is NDIS Plan Management?">
                 <h2>What is NDIS Plan Management?</h2>
                 <p class="date">2024-08-06  /  Interchange News, Blog, Customer Information</p>
                 <p class="description">As part of the National Disability Insurance Scheme, you can use NDIS Plan Management to give you support, choice, and control over how you use the money in your NDIS plan.</p>
@@ -72,7 +72,7 @@
             </article>
 
             <article class="story">
-                <img src="image3.png" alt="We Think You Are Awesome – Jade">
+                <img src="./Images/Awesome.jpg" alt="We Think You Are Awesome – Jade">
                 <h2>We Think You Are Awesome – Jade</h2>
                 <p class="date">2024-07-30  /  Blog, Stories</p>
                 <p class="description">Jade’s passion is evident in her role at Interchange, where she keeps administrative tasks running smoothly to help people with disability live fulfilling lives. Jade enjoys knowing that she is doing something that adds value to someone’s life.</p>
@@ -83,7 +83,7 @@
         <!-- Second Section with a single story and pagination -->
         <section class="stories single-story">
             <article class="story">
-                <img src="image4.png" alt="We Think You Are Awesome">
+                <img src="./Images/Awesome.jpg" alt="We Think You Are Awesome">
                 <h2>We Think You Are Awesome – Lee</h2>
                 <p class="date">2024-06-19  /  Blog, Stories</p>
                 <p class="description">
@@ -95,7 +95,7 @@
             </article>
 
             <article class="story">
-                <img src="image4.png" alt="We Think You Are Awesome">
+                <img src="./Images/Awesome.jpg" alt="We Think You Are Awesome">
                 <h2>When Dreams Come True – Marc’s Journey to Employment</h2>
                 <p class="date">2024-06-06  /  Blog, Stories</p>
                 <p class="description">
@@ -105,7 +105,7 @@
             </article>
 
             <article class="story">
-                <img src="image4.png" alt="We Think You Are Awesome">
+                <img src="./Images/Awesome.jpg" alt="We Think You Are Awesome">
                 <h2>Love Beyond the Job Role</h2>
                 <p class="date">2024-05-28  /  Blog, Stories</p>
                 <p class="description">
@@ -119,7 +119,7 @@
         <!-- third Section with a single story and pagination -->
         <section class="stories single-storyy">
             <article class="story">
-                <img src="image4.png" alt="We Think You Are Awesome">
+                <img src="./Images/Awesome.jpg" alt="We Think You Are Awesome">
                 <h2>What is the WA Companion Card?</h2>
                 <p class="date">2024-07-30  /  Interchange News, Blog, Customer Information</p>
                 <p class="description">
@@ -130,7 +130,7 @@
             </article>
 
             <article class="story">
-                <img src="image4.png" alt="We Think You Are Awesome">
+                <img src="./Images/Awesome.jpg" alt="We Think You Are Awesome">
                 <h2>We Think You Are Awesome – Meigan</h2>
                 <p class="date">2024-07-15  /  Blog, Stories</p>
                 <p class="description">
@@ -142,7 +142,7 @@
             </article>
 
             <article class="story">
-                <img src="image4.png" alt="We Think You Are Awesome">
+                <img src="./Images/Awesome.jpg" alt="We Think You Are Awesome">
                 <h2>A Deep Seeded Passion – Meet Trevor</h2>
                 <p class="date">2024-06-27  /  Blog, Stories</p>
                 <p class="description">
@@ -155,7 +155,7 @@
         <!-- third Section with a single story and pagination -->
         <section class="stories single-storyyy">
             <article class="story">
-                <img src="image4.png" alt="We Think You Are Awesome">
+                <img src="./Images/Awesome.jpg" alt="We Think You Are Awesome">
                 <h2>We Think You Are Awesome – Geoffrey</h2>
                 <p class="date">2024-05-28  /  Blog, Stories</p>
                 <p class="description">
