Todays Last chages

--- a/Services-main/services.html
+++ b/Services-main/services.html
@@ -45,11 +45,11 @@
     <div class="services-section">
         <h1>Services</h1>
         <div class="breadcrumb">
-            <a href="#">Home</a> > <span>Services</span>
-        </div>
+            <a href="#">Home</a> <span> <span> ></span> </span>  <span>Services</span>
+        </div><hr>
 
         <div class="service-item">
-            <img src="path-to-your-image1.jpg" alt="Shared Management">
+            <img src="./Images/Share_management.jpg" alt="Shared Management">
             <div class="service-content">
                 <h2>Shared Management</h2>
                 <p>
@@ -63,7 +63,7 @@
         </div>
 
         <div class="service-item">
-            <img src="path-to-your-image2.jpg" alt="Daily Living Skills">
+            <img src="./Images/Daily_living skill.jpg" alt="Daily Living Skills">
             <div class="service-content">
                 <h2>Daily Living Skills</h2>
                 <p>
@@ -77,7 +77,7 @@
         </div>
 
         <div class="service-item">
-            <img src="path-to-your-image3.jpg" alt="NDIS Plan Management">
+            <img src="./Images/NDIS Plan Management.jpg" alt="NDIS Plan Management">
             <div class="service-content">
                 <h2>NDIS Plan Management</h2>
                 <p>
@@ -90,7 +90,7 @@
         </div>
 
         <div class="service-item">
-            <img src="path-to-your-image4.jpg" alt="Personal Care">
+            <img src="./Images/Personal Care.jpg" alt="Personal Care">
             <div class="service-content">
                 <h2>Personal Care</h2>
                 <p>
@@ -103,7 +103,7 @@
         </div>
 
         <div class="service-item">
-            <img src="path-to-your-image4.jpg" alt="Developing Capacity & Learning">
+            <img src="./Images/Developing Capacity & Learning.jpg" alt="Developing Capacity & Learning">
             <div class="service-content">
                 <h2>Developing Capacity & Learning</h2>
                 <p>
@@ -116,7 +116,7 @@
         </div>
 
         <div class="service-item">
-            <img src="path-to-your-image4.jpg" alt="Short-Term Accommodation (STA)">
+            <img src="./Images/Short-Term Accommodation (STA).jpg" alt="Short-Term Accommodation (STA)">
             <div class="service-content">
                 <h2>Short-Term Accommodation (STA)</h2>
                 <p>
@@ -128,7 +128,7 @@
         </div>
 
         <div class="service-item">
-            <img src="path-to-your-image4.jpg" alt="Personal Care">
+            <img src="./Images/Transport Options.jpg" alt="Personal Care">
             <div class="service-content">
                 <h2>Transport Options</h2>
                 <p>
@@ -141,7 +141,7 @@
         </div>
 
         <div class="service-item">
-            <img src="path-to-your-image4.jpg" alt="Personal Care">
+            <img src="./Images/Social & Community Participation.jpg" alt="Personal Care">
             <div class="service-content">
                 <h2>Social & Community Participation</h2>
                 <p>
