--- a/Services-main/index.html
+++ b/Services-main/index.html
@@ -174,7 +174,7 @@
       <div>
           <h2>We Think You Are Awesome - Jade</h2>
           <p>Jade’s passion is evident in her role at Interchange, where she keeps administrative tasks running smoothly to help people with disability live fulfilling lives.</p>
-          <a href="#">Read more</a>
+          <a href="#"><u>Read more</u></a>
       </div>
   </div>
   <div class="assume-item">
@@ -182,7 +182,7 @@
       <div>
           <h2>We Think You Are Awesome - Meigan</h2>
           <p>Several years ago, Meigan would work at her old job at a food court, and she would always be so delighted by the great spirit and friendliness people with disability would approach her with.</p>
-          <a href="#">Read more</a>
+          <a href="#"><u>Read more</u></a>
       </div>
   </div>
   <div class="assume-item">
@@ -190,7 +190,7 @@
       <div>
           <h2>A Deep Seeded Passion - Meet Trevor</h2>
           <p>Marc’s story is a testament to the positive impact of aligning interests with meaningful actions. A close and genuine relationship with his Support Workers Sandra and Nicola meant that he felt comfortable sharing his passions with his team.</p>
-          <a href="#">Read more</a>
+          <a href="#"><u>Read more</u></a>
       </div>
   </div>
 </div>
