changes for mobile devices

--- a/Services-main/index.html
+++ b/Services-main/index.html
@@ -30,8 +30,8 @@
             </div> 
             <nav class="sidebar">
                 <a onclick=hideSidebar()><svg xmlns="http://www.w3.org/2000/svg" height="auto" viewBox="0 -960 960 960" width="30px" fill="#000"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg></a>
-                <a href="#" class="search-icon">🔍</a>
-                <a href="services.html">Services</a>
+               <hr><a href="#" class="search-icon">🔍</a>
+               <hr><a href="services.html">Services</a>
                 <a href="our_approach.html">Our Approach</a>
                 <a href="stories.html">Stories</a></li>
                 <a href="contact.html">Contact</a>            
