--- a/Services-main/services.html
+++ b/Services-main/services.html
@@ -53,8 +53,12 @@
     
         </div>
     </header>
-<section class="info-section">    
-</section>
+    <section class="info-section">
+        <div class="info-content">
+            <h2>Everyone belongs</h2>
+            <p>Supporting people with disability to live a good life</p>
+        </div>
+    </section>
     
     <div class="services-section">
         <h1>Services</h1>
