--- a/Services-main/stories.html
+++ b/Services-main/stories.html
@@ -227,5 +227,15 @@
             
         </div>
       </footer>
+      <script>
+        function showSidebar(){
+            const sidebar = document.querySelector('.sidebar') 
+            sidebar.style.display = 'flex'
+        }
+        function hideSidebar(){
+            const sidebar = document.querySelector('.sidebar') 
+            sidebar.style.display = 'none'
+        }
+    </script>
 </body>
 </html>
