Updated Contact us

--- a/Services-main/contact.html
+++ b/Services-main/contact.html
@@ -150,6 +150,16 @@
             </div>
         </div>
     </div>
+    <script>
+      function showSidebar(){
+          const sidebar = document.querySelector('.sidebar') 
+          sidebar.style.display = 'flex'
+      }
+      function hideSidebar(){
+          const sidebar = document.querySelector('.sidebar') 
+          sidebar.style.display = 'none'
+      }
+  </script>
 </body>
 
 </html>
